first corrections implemented

--- a/literature.bib
+++ b/literature.bib
@@ -61,7 +61,6 @@
 }
 
 @article{PhysRevSTAB17021006,
-
     author        =   {Braun, H.~H. and Fass\`o, A. and Ferrari, A. and Jowett, J.~M. and Sala, P.~R. and Smirnov, G.~I.},
     title         =  "{Hadronic and electromagnetic fragmentation of ultrarelativistic heavy ions at LHC}",
     journal       =  "{Phys. Rev. ST Accel. Beams}",
@@ -1427,4 +1426,95 @@
     year          =  "{2015}",
     school        =  "{RWTH Aachen}",
     url           =  "{https://cds.cern.ch/record/2065692/files/CERN-THESIS-2015-195.pdf}"
+}
+
+@article{higgs:ATLAS,                                                                                                   
+    author        =   {ATLAS Collaboration},
+    title         =  "{Observation of a new particle in the search for the Standard Model Higgs boson with the ATLAS detector at the LHC}",
+    journal       =  "{Physics Letters B}",
+    number        =  "{1}",
+    year          =  "{2012}",
+    volume        =  "{716}",
+    pages         =  "{1--29}"
+}
+
+@article{higgs:CMS,       
+    author        =   {CMS Collaboration},
+    title         =  "{Observation of a new boson at a mass of 125 GeV with the CMS experiment at the LHC}",
+    journal       =  "{Physics Letters B}",
+    number        =  "{1}",
+    year          =  "{2012}",
+    volume        =  "{716}",
+    pages         =  "{30--61}"
+}
+
+ @misc{lechner:blmpos,
+    author        =  {Lechner, A. } ,
+    title         = "{BLM thresholds for post-LS1 LHC operation: UFOs and orbit bumps in the arcs and straight sections}",
+    note          = "{Presentation at Workshop on Beam-Induced Quenches, 16.09.2014}",
+    year          =  2014,    
+    url           = \url{https://indico.cern.ch/event/323249/contributions/1703684/attachments/625502/860699/2014_16_09_biq14arcblmthr.pdf}
+ },
+
+@article{proceedingsCAS:herr,
+    author        =   {Herr, W.},
+    title         =  "{Concept of luminosity}",
+    journal       =  "{Proceedings of CERN Accelerator School: 5th Intermediate Accelerator Physics Course}",
+    year          =  "{2003}",
+    note          =  "{CERN-2006-002}",
+}
+
+@article{IPAC13:MOZB202,
+    author        =   {Bordry, F. and Baird, S. and Foraz, K. and Perro, A. L. and Saban, R. and Tock, J. P.},
+    title         =  "{The first Long Shutdown (LS1) for the LHC}",
+    journal       =  "{Proceedings of IPAC 2013, Shanghai, China}",
+    number        =  "{MOZB202}",
+    year          =  "{2013}",
+    pages         =  "{44--48}",
+    url           =  "{https://cds.cern.ch/record/1575133/files/CERN-ACC-2013-0084.pdf}",
+}
+
+@article{IPAC16:TUPMW023,
+    author        =   {Papotti, G. and Albert, M. and Auchmann, B. and Holzer, E. B. and Kalliokoski, M. and Lechner, A.},
+    title         =  "{Macroparticle-induced Losses during 6.5 TeV LHC Operation}",
+    journal       =  "{Proceedings of IPAC 2016, Busan, Korea}",
+    number        =  "{TUPMW023}",
+    year          =  "{2016}",
+    pages         =  "{1481--1484}",
+    url           =  "{http://accelconf.web.cern.ch/AccelConf/ipac2016/papers/tupmw023.pdf}",
+}
+
+@article{PartACC13115,
+    author        =   {Mtingwa, S. K. and Bjorken, J. D.},
+    title         =  "{Intrabeam scattering}",
+    journal       =  "{Part. Acc.}",
+    year          =  "{1983}",
+    volume        =  "{13}",
+    pages         =  "{115--143}",
+    url           =  "{https://cds.cern.ch/record/140304/files/p115.pdf}",
+}
+
+@article{ICHEA:PIWINSKI,
+    author        =   {Piwinski, A.},
+    title         =  "{Intra-Beam Scattering}",
+    journal       =  "{Proceedings of the IXth International Conference on High Energy Accelerators, Stanford, CA, USA}",
+    number        =  "{SLAC-R-839}",
+    year          =  "{1974}",
+    pages         =  "{405--409}",
+    url           =  "{http://www.slac.stanford.edu/cgi-wrap/getdoc/slac-r-839-a.pdf}",
+}
+
+ @article{assmann:chamonixXIV,
+    author        =   {Assmann, R. W.},
+    title         =  "{Collimators and Beam Absorbers for Cleaning and Machine Protection}",
+    journal       =  "{LHC Project Workshop XIV, Chamonix, France}",
+    year          =  "{2005}",
+    publisher     =  "{CERN}",
+}
+
+@article{projectnote293,
+    author        =  {Assmann, R. and Goddard, B. and Vossenberg, E. and Weisse, E.},
+    title         = "{The Consequences of Abnormal Beam Dump Actions on the LHC Collimation System}",
+    number        = "{LHC Project Note 293}",
+    year          = "2002",
 }
